// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Attribution renders correctly 1`] = `
.c1 {
  color: var(--colorForeground);
  font-weight: 600;
  -webkit-text-decoration-color: var(--colorForegroundSoft);
  text-decoration-color: var(--colorForegroundSoft);
  -webkit-text-decoration-thickness: 0.1em;
  text-decoration-thickness: 0.1em;
  text-underline-offset: 0.1em;
}

.c1:hover,
.c1:focus {
  -webkit-text-decoration-color: var(--colorAccent);
  text-decoration-color: var(--colorAccent);
}

.c0 {
  list-style: none;
  padding: 0;
}

<ul
  class="c0"
>
  <li>
    <cite>
      Sunflowers
      . 
    </cite>
    Photography by
     
    <a
      class="c1"
      href="https://www.stefanimhoff.de"
      rel="nofollow noopener noreferrer external"
    >
      Stefan Imhoff
    </a>
  </li>
</ul>
`;

exports[`Attribution with author and link renders correctly 1`] = `
.c1 {
  color: var(--colorForeground);
  font-weight: 600;
  -webkit-text-decoration-color: var(--colorForegroundSoft);
  text-decoration-color: var(--colorForegroundSoft);
  -webkit-text-decoration-thickness: 0.1em;
  text-decoration-thickness: 0.1em;
  text-underline-offset: 0.1em;
}

.c1:hover,
.c1:focus {
  -webkit-text-decoration-color: var(--colorAccent);
  text-decoration-color: var(--colorAccent);
}

.c0 {
  list-style: none;
  padding: 0;
}

<ul
  class="c0"
>
  <li>
    Photography by
     
    <a
      class="c1"
      href="https://www.stefanimhoff.de"
      rel="nofollow noopener noreferrer external"
    >
      Stefan Imhoff
    </a>
  </li>
</ul>
`;

exports[`Attribution with author renders correctly 1`] = `
.c0 {
  list-style: none;
  padding: 0;
}

<ul
  class="c0"
>
  <li>
    Photography by 
    <b>
      Stefan Imhoff
    </b>
  </li>
</ul>
`;

exports[`Attribution with multiple attributions renders correctly 1`] = `
.c1 {
  color: var(--colorForeground);
  font-weight: 600;
  -webkit-text-decoration-color: var(--colorForegroundSoft);
  text-decoration-color: var(--colorForegroundSoft);
  -webkit-text-decoration-thickness: 0.1em;
  text-decoration-thickness: 0.1em;
  text-underline-offset: 0.1em;
}

.c1:hover,
.c1:focus {
  -webkit-text-decoration-color: var(--colorAccent);
  text-decoration-color: var(--colorAccent);
}

.c0 {
  list-style: none;
  padding: 0;
}

<ul
  class="c0"
>
  <li>
    <cite>
      Sunflowers
      . 
    </cite>
    Photography by
     
    <a
      class="c1"
      href="https://www.stefanimhoff.de"
      rel="nofollow noopener noreferrer external"
    >
      Stefan Imhoff
    </a>
  </li>
  <li>
    <cite>
      Boat on a River
      . 
    </cite>
    Photography by 
    <b>
      Stefan Imhoff
    </b>
  </li>
</ul>
`;

exports[`Attribution with title and author renders correctly 1`] = `
.c0 {
  list-style: none;
  padding: 0;
}

<ul
  class="c0"
>
  <li>
    <cite>
      Sunflowers
      . 
    </cite>
    Photography by 
    <b>
      Stefan Imhoff
    </b>
  </li>
</ul>
`;
